--- a/style.scss
+++ b/style.scss
@@ -158,12 +158,13 @@ header {
 // Feautures section starts  
 #feautures {
     width: 100%;
-    min-height: 100vh;
+    height: 100%;
     background: linear-gradient(135deg , $lightGray , $black);
     display: grid;
     grid-template-columns: 10% 1fr 1fr 1fr 10%;
     grid-template-rows: 70px 320px 320px ;
     grid-gap: 20px;
+    margin: 30px 0px;
     h2 {
         grid-column: 2/5;
         justify-self: center;
